#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ([2.64])
AC_INIT(paagent, 0.01, vjuresch@sophia.inria.fr)
AM_INIT_AUTOMAKE([dist-bzip2])
#AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])

#CFLAGS="$CFLAGS"
CXXFLAGS="$CXXFLAGS"

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([ccgnu2], [main])
AC_CHECK_LIB([dl], [main])
AC_CHECK_LIB([log4cxx], [main])
AC_CHECK_LIB([rt], [main])
AC_CHECK_LIB([z], [main])
AC_CHECK_LIB([xerces-c-3.0], [main])
AC_CHECK_LIB([dbus-cxx], [main])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_INT32_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T


# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_ERROR_AT_LINE

#ubuntu
PKG_CHECK_MODULES(DBUS_CXX, dbus-cxx-1.0)
PKG_CHECK_MODULES(LOG4CXX, liblog4cxx)
PKG_CHECK_MODULES(GNUCXX, libccgnu2)
PKG_CHECK_MODULES(XERC, xerces-c)
#???
#PKG_CHECK_MODULES(GTEST, gtest)

#AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
